k8s-prod/mysql.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql-headless
  namespace: expense
spec:
  clusterIP: None # for headless service there is no cluster IP
  selector:
    project: expense
    component: mysql
    tier: db
  ports:
  - protocol: TCP
    port: 3306 # service port
    targetPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: expense
spec:
  selector:
    project: expense
    component: mysql
    tier: db
  ports:
  - protocol: TCP
    port: 3306 # service port
    targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: expense
spec:
  selector:
    matchLabels:
      project: expense
      component: mysql
      tier: db
  serviceName: "mysql-headless" # this is the headless service should be mentioned for statefulset
  replicas: 1
  template:
    metadata:
      labels:
        project: expense
        component: mysql
        tier: db
    spec:
      containers:
      - name: mysql
        image: ravi6198/mysql:v1.0
        volumeMounts:
        - name: mysql
          mountPath: /var/lib/mysql
  # This is PVC defnition, directly mentioned here
  volumeClaimTemplates:
  - metadata:
      name: mysql
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "expense-ebs"
      resources:
        requests:
          storage: 1Gi
